@@ -1,3 +1,5 @@
+2007/11/19
+	Remove reference to kwsPlusRoadmap.
 2007/11/14
 	Do not delete attribute attHppPlanner at destruction of ChppciServer.
 	Correction of documentation generation related to previous modification.
